# MichaelScofield111.github.io

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: deploy.yml
content/: Making-auto-blog.md
src/: frontmatter.rs  generator.rs  main.rs  post.rs  template.rs
static/css/: clean-blog.min.css
templates/: index.hbs  post.hbs
